<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B6481"
    android:orientation="vertical"
    android:padding="8dip"
    android:weightSum="1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/background_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="78dp"
            android:layout_height="66dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/pdfdownloadActivitymainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/image1"
            android:text="PDF Download Activity"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/PDF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="27dp"
            android:text="PDF1 File Location"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterpdf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/PDF1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textShortMessage"
            android:text="@string/file1" />

        <TextView
            android:id="@+id/PDF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PDF1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="27dp"
            android:text="PDF2 File Location"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterpdf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/enterpdf3"
            android:layout_alignLeft="@+id/enterpdf3"
            android:layout_alignTop="@+id/PDF2"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textShortMessage"
            android:text="@string/file2" />

        <TextView
            android:id="@+id/PDF3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PDF2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="27dp"
            android:text="PDF3 File Location"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterpdf3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/PDF3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textShortMessage"
            android:text="@string/file3" />


        <TextView
            android:id="@+id/PDF4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PDF3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="27dp"
            android:text="PDF4 File Location"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterpdf4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/PDF4"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textShortMessage"
            android:text="@string/file4" />

        <TextView
            android:id="@+id/PDF5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PDF4"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="27dp"
            android:text="PDF5 File Location"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterpdf5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/PDF5"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textShortMessage"
            android:text="@string/file5" />


        <Button
            android:id="@+id/StartDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PDF5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="startDownload"
            android:text="Start Download" />


    </RelativeLayout>
</LinearLayout>